<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="weight">Тегло</string>
    <string name="height">Височина</string>
    <string name="calculate">Пресметни</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="delete_history">Delete history</string>
    <string name="to_receive_more_information_about_the_corresponding_weight_category_enter_your_number">To receive more information about the corresponding weight category, enter your number.</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="send">Send</string>
    <string name="learn_more">Learn More</string>
    <string name="delete">Delete</string>
    <string name="your_data">Your data</string>
</resources>