<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#858C7D"
    tools:context=".SMSActivity">

    <TextView
        android:id="@+id/bmi_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learn_more"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/my_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:background="@color/half_black">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/to_receive_more_information_about_the_corresponding_weight_category_enter_your_number"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/enterNumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_your_number"
            android:gravity="center"
            android:textColorHint="@color/black"
            android:background="@drawable/rounded_text"
            android:inputType="number"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/calc_btn"
            android:text="@string/send"
            android:textColor="@color/white" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomNav"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu"/>

</RelativeLayout>