<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#858C7D"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/half_black"/>

    <TextView
        android:id="@+id/bmi_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmi_calculator"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:background="@color/black"/>

    <EditText
        android:id="@+id/inputWeight"
        android:layout_below="@id/bmi_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:hint="@string/weight"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="@color/black"
        android:autofillHints=""
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_text"/>

    <EditText
        android:id="@+id/inputHeight"
        android:layout_below="@id/inputWeight"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:hint="@string/height"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="@color/black"
        android:autofillHints=""
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_text"/>

    <LinearLayout
       android:id="@+id/my_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/inputHeight"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">


        <ImageButton
            android:id="@+id/btn_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_history"
            android:layout_weight="1">
        </ImageButton>

        <Button
            android:id="@+id/btnCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/calc_btn"
            android:text="@string/calculate"
            android:textStyle="normal"
            android:textSize="20sp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:layout_weight="1"
            />

        <ImageButton
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_refresh"
            android:layout_weight="1">
        </ImageButton>

    </LinearLayout>

    <TextView
        android:id="@+id/textResult"
        android:layout_below="@id/my_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:background="@drawable/shape_result"/>

    <ListView
        android:layout_above="@id/bottomNav"
        android:layout_below="@id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/list_bmi_results"
        android:visibility="gone"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomNav"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu"/>


</RelativeLayout>